all: update gradle build configs to support structured concurrency incubator modules